--- a/digitalxmas/templates/digitalxmas/media_form.html
+++ b/digitalxmas/templates/digitalxmas/media_form.html
@@ -1,1 +1,14 @@
-{% form %}
+{% extends "digitalxmas/base.html" %}
+{% load bootstrap %}
+{% block content %}
+<form class="form-horizontal">
+    <legend>Carica il tuo augurio di Natale!</legend>
+    {% csrf_token %}
+    {{ form|bootstrap_horizontal }}
+    <div class="form-group">
+        <div class="col-sm-10 col-sm-offset-2">
+            <button type="submit" class="btn btn-primary">Invia</button>
+        </div>
+    </div>
+</form>
+{% endblock %}
