--- a/digitalxmas/static/digitalxmas/css/style.css
+++ b/digitalxmas/static/digitalxmas/css/style.css
@@ -1,1 +1,20 @@
-# Empty CSS file for your own CSS
+.mybody {
+    text-align: center;
+    padding: 40px 15px;
+    margin-top: 1em;
+    border-radius: 0.5em;
+}
+.blue {
+    background: #3498DB none repeat scroll 0% 0%;
+    color: #FFF;
+}
+h2 {
+    font-family: Pacifico;
+    font-size: 36px;
+    margin: 20px auto;
+    text-align: center;
+}
+.media-list, .media-show {
+    margin: 4em 4em;
+    padding: 0.5em 1em;
+}
