--- a/digitalxmas/templates/digitalxmas/media_form.html
+++ b/digitalxmas/templates/digitalxmas/media_form.html
@@ -1,7 +1,7 @@
 {% extends "digitalxmas/base.html" %}
 {% load bootstrap %}
 {% block content %}
-<form class="form-horizontal">
+<form class="form-horizontal" action="{% url 'media-add' %}" method="POST">
     <legend>Carica il tuo augurio di Natale!</legend>
     {% csrf_token %}
     {{ form|bootstrap_horizontal }}
