--- a/digitalxmas/templates/digitalxmas/media_list.html
+++ b/digitalxmas/templates/digitalxmas/media_list.html
@@ -6,10 +6,18 @@
 {% endblock %}
 
 {% block content %}
+<h2>Buon Natale Fabriano!</h2>
+<p class="lead">Per il nostro territorio</p>
+
+<div class="media-show">
+    {% for obj in object_list %}
+        <div><h3>{{ obj.title }}</h3></div>
+    {% endfor %}
+</div>
 
 <div class="media-list">
     {% for obj in object_list %}
-        <div>{{ obj.title }}</div>
+        <div><h3>{{ obj.title }}</h3></div>
     {% endfor %}
 </div>
 
@@ -21,12 +29,23 @@
     <script type="text/javascript" src="{% static "base/slick/slick.min.js" %}"></script>
     <script type="text/javascript">
         $(document).ready(function(){
-          $('.media-list').slick(); /*{
+          $('.media-show').slick({
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                arrows: false,
+                fade: true,
+                asNavFor: '.media-list'
+          });
+          $('.media-list').slick({
                 slidesToShow: 3,
                 slidesToScroll: 1,
                 autoplay: true,
                 autoplaySpeed: 2000,
-          });*/
+                asNavFor: '.media-show',
+                centerMode: true,
+                focusOnSelect: true,
+                dots: true
+          });
         });
   </script>
 {% endblock %}
