--- a/digitalxmas/static/digitalxmas/css/style.css
+++ b/digitalxmas/static/digitalxmas/css/style.css
@@ -19,8 +19,30 @@ h2 {
     padding: 0.5em 1em;
 }
 
+
 .media-thumbnail {
     border: 1px solid white;
     border-radius: 0.2em;
     margin: 0px 0.5em;
+    width: 420px;
+    height: 315px
+}
+
+/*
+.media-thumbnail {
+    border: 1px solid white;
+    border-radius: 0.2em;
+    margin: 0px 0.5em;
+}
+*/
+
+.media-info {
+    height: 320px;
+    background-color: rgb(125, 197, 225);
+    border-radius: 25px;
+    border: 2px solid;
+    padding: 5%;
+    font-size: large;
+    width: 50%;
+    float: right;
 }
