Integrati i nuovi sviluppi della ui ionic

--- a/ui/templates/playlists.html
+++ b/ui/templates/playlists.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Tanti auguri!">
+<ion-view view-title="Buon Natale Fabriano!">
   <ion-content>
     <ion-card ng-repeat="kind in kinds">
         <ion-item class="item-body" href="#/app/playlists/{{kind.slug}}">
