--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -1,1 +1,69 @@
 /* Empty. Add your own CSS if you like */
+.photo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.available-scroller {
+    height: 250px;
+}
+
+.item-input input, .item-input textarea {
+    border: 1px dashed #387EF5;
+    border-radius: 0.2em;
+    margin-right: 0.5em;
+}
+.boxsizingBorder {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.text-middle {
+    height: 8em;
+}
+
+/* text scrolling by http://www.quackit.com/html/html_editors/scratchpad/?example=/css/codes/marquees/scrolling_text*/
+.text-scrolling {
+    height: 50px;
+    overflow: hidden;
+    position: relative;
+}
+.text-scrolling h3 {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    line-height: 50px;
+    text-align: center;
+    /* Starting position */
+    -moz-transform:translateX(100%);
+    -webkit-transform:translateX(100%);
+    transform:translateX(100%);
+    /* Apply animation to this element */
+    -moz-animation: text-scrolling 15s linear infinite;
+    -webkit-animation: text-scrolling 15s linear infinite;
+    animation: text-scrolling 15s linear infinite;
+}
+/* Move it (define the animation) */
+@-moz-keyframes text-scrolling {
+    0%   { -moz-transform: translateX(100%); }
+    100% { -moz-transform: translateX(-100%); }
+}
+@-webkit-keyframes text-scrolling {
+    0%   { -webkit-transform: translateX(100%); }
+    100% { -webkit-transform: translateX(-100%); }
+}
+@keyframes text-scrolling {
+    0%   {
+        -moz-transform: translateX(100%); /* Firefox bug fix */
+        -webkit-transform: translateX(100%); /* Firefox bug fix */
+        transform: translateX(100%);
+    }
+    100% {
+        -moz-transform: translateX(-100%); /* Firefox bug fix */
+        -webkit-transform: translateX(-100%); /* Firefox bug fix */
+        transform: translateX(-100%);
+    }
+}
