--- a/ui/templates/login.html
+++ b/ui/templates/login.html
@@ -14,7 +14,11 @@
           </ion-item>
         <label class="item item-input" ng-if="!new_wish.url">
           <span class="input-label">Link video YouTube</span>
-          <input type="text" ng-model="new_wish.url"placeholder=" vedi un video YouTube, clicca su condividi e copia l'indirizzo" >
+          <input type="text" ng-model="new_wish.url" placeholder=" vedi un video YouTube, clicca su condividi e copia l'indirizzo" >
+        </label>
+        <label class="item item-input">
+          <span class="input-label">Titolo</span>
+          <input type="text" ng-model="new_wish.title" placeholder=" intitola il tuo augurio!">
         </label>
         <label class="item item-input">
           <span class="input-label">Il tuo nome</span>
