--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -37,14 +37,15 @@
     border-radius: 1em 1em 0 0;
     border: 1px solid #3498DB;
     margin-bottom: 0px;
+    text-align: center;
 }
 
 .wish-cell {
   padding: 0px;
   border: 0px;
   vertical-align: middle;
-  min-width: 480px;
-  min-height: 360px;
+  //min-width: 480px;
+  //min-height: 360px;
 }
 
 .wish-cell-right {
