--- a/ui/templates/menu.html
+++ b/ui/templates/menu.html
@@ -5,7 +5,7 @@
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
-        <button class="button button-large icon-left button-balanced ion-plus" menu-toggle="left"> CREA! </button>
+        <button class="button button-large icon-left button-balanced ion-navicon" menu-toggle="left"> INVIA IL TUO AUGURIO! </button>
       </ion-nav-buttons>
     </ion-nav-bar>
     <ion-nav-view name="menuContent"></ion-nav-view>
