--- a/ui/css/style.css
+++ b/ui/css/style.css
@@ -1,8 +1,9 @@
 /* Empty. Add your own CSS if you like */
 .photo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  //display: flex;
+  //align-items: center;
+  //justify-content: center;
+  width: 100%;
 }
 
 .header-item {
