--- a/ui/templates/detail.html
+++ b/ui/templates/detail.html
@@ -1,16 +1,16 @@
 <ion-view view-title="Che ti sia di buon augurio!">
   <ion-content class="mybody">
   <div class="container">
-       <div class="wish-card">
+       <div class="wish-card wish-detail">
        <h3 class="item-divider wish-top">{{wish.title}}</h3>
           <div class="item wish-cell wish-cell-preview" id="wish-{{wish.id}}">
               <img class="photo" ng-src="{{wish.preview.url}}" />
               <div ng-if="wish.preview.kind == 'video'" data-layer="4" style="background-image: url(&quot;{{wish.preview.url}}&quot;);" class="ytp-thumbnail-overlay ytp-cued-thumbnail-overlay"><button aria-label="Guarda {{wish.title}}" style="" class="ytp-large-play-button ytp-button"><svg height="100%" version="1.1" viewBox="0 0 68 48" width="100%"><path class="ytp-large-play-button-bg" d="m .66,37.62 c 0,0 .66,4.70 2.70,6.77 2.58,2.71 5.98,2.63 7.49,2.91 5.43,.52 23.10,.68 23.12,.68 .00,-1.3e-5 14.29,-0.02 23.81,-0.71 1.32,-0.15 4.22,-0.17 6.81,-2.89 2.03,-2.07 2.70,-6.77 2.70,-6.77 0,0 .67,-5.52 .67,-11.04 l 0,-5.17 c 0,-5.52 -0.67,-11.04 -0.67,-11.04 0,0 -0.66,-4.70 -2.70,-6.77 C 62.03,.86 59.13,.84 57.80,.69 48.28,0 34.00,0 34.00,0 33.97,0 19.69,0 10.18,.69 8.85,.84 5.95,.86 3.36,3.58 1.32,5.65 .66,10.35 .66,10.35 c 0,0 -0.55,4.50 -0.66,9.45 l 0,8.36 c .10,4.94 .66,9.45 .66,9.45 z" fill="#1f1f1e" fill-opacity="0.81"></path><path d="m 26.96,13.67 18.37,9.62 -18.37,9.55 -0.00,-19.17 z" fill="#fff"></path><path d="M 45.02,23.46 45.32,23.28 26.96,13.67 43.32,24.34 45.02,23.46 z" fill="#ccc"></path></svg></button></div>
           </div>
           <div class="col wish-cell blue wish-cell-right">
-              <ion-item class="wish-body blue">
+              <div class="item wish-body blue">
                   <em>{{wish.dedication||"(...nessuna dedica inserita...)"}}</em>
-              </ion-item>
+              </div>
               <div class="item item-avatar wish-bottom blue">
                   <img ng-src="{{wish.author_avatar}}">
                   <em>{{ wish.author_name||"(...nessun autore inserito...)" }}</em>
