--- a/ui/templates/login.html
+++ b/ui/templates/login.html
@@ -1,6 +1,6 @@
 <ion-modal-view>
   <ion-header-bar class="bar-calm">
-    <h1 class="title">Augura buone feste da {{kind_humanized}}</h1>
+    <h1 class="title">Augura buone feste</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeLogin()">Close</button>
     </div>
@@ -8,13 +8,19 @@
   <ion-content>
     <form ng-submit="doAddFabrianoWish()">
       <div class="list">
+          <div class="row" style="margin: auto;" ng-if="!new_wish.url">
+              <div class="col"><img src="https://www.youtube.com/yt/brand/media/image/YouTube-icon-full_color.png" height="48" /></div>
+              <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Facebook_Logo.jpg" height="48" /></div>
+              <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Photo_camera_icon.png" height="48" /></div>
+              <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Link_icon.svg/512px-Link_icon.svg.png" height="48" /></div>
+          </div>
           <ion-item class="photo" ng-if="new_wish.url">
               <img ng-src="{{new_wish.preview_url}}" height="200" />
           <!-- <em>foto da {{fab_photo.author}}</em> -->
           </ion-item>
-        <label class="item item-input" ng-if="!new_wish.url">
-          <span class="input-label">Link video YouTube</span>
-          <input type="text" ng-model="new_wish.url" placeholder=" vedi un video YouTube, clicca su condividi e copia l'indirizzo" >
+        <label class="item item-input">
+          <span class="input-label">Link da caricare</span>
+          <input type="text" ng-model="new_wish.url" placeholder=" un video YouTube, un video Facebook, una foto, o copia qui un altro link" >
         </label>
         <label class="item item-input">
           <span class="input-label">Titolo</span>
