[UI] allineamento con discrimine dei 1000px

--- a/ui/templates/menu.html
+++ b/ui/templates/menu.html
@@ -21,7 +21,7 @@
         <ion-item menu-close ng-click="addWish('Fabriano', fab_photo.preview.url, fab_photo.preview.url)" ng-repeat="fab_photo in fab_photos" item-width="90%" >
             <a href="#"><img ng-src="{{fab_photo.preview.url}}" width="100%" alt="Foto di {{fab_photo.author}}" title="Foto di {{fab_photo.author}}" /></a>
         </ion-item>
-        <ion-item class="item-divider"> Dedica un video </ion-item>
+        <ion-item class="item-divider"> Carica da link </ion-item>
         <ion-item menu-close ng-click="addWish('Link')" >
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Link_icon.svg/512px-Link_icon.svg.png" width="100%" />
         </ion-item>
