Allineata la ui alla versione di Dawid

--- a/ui/templates/login.html
+++ b/ui/templates/login.html
@@ -14,10 +14,11 @@
             <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/8/8b/Photo_camera_icon.png" height="48" /></div>
             <div class="col"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dc/Link_icon.svg/512px-Link_icon.svg.png" height="48" /></div>
         </div>
+        <!-- OLD photo
         <ion-item class="photo" ng-if="new_wish.url">
-            <img ng-src="{{new_wish.preview_url}}" height="200" />
+            <img ng-src="{{new_wish.preview_url}}" height="200" /> -->
         <!-- <em>foto da {{fab_photo.author}}</em> -->
-        </ion-item>
+        <!-- </ion-item> -->
         <label class="item item-input">
           <span class="input-label">Link da caricare</span>
           <input type="text" ng-model="new_wish.url" placeholder=" un video YouTube, un video Facebook, una foto, o copia qui un altro link" >
