--- a/ui/templates/partners.html
+++ b/ui/templates/partners.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Realizzato insieme">
+<ion-view view-title="Realizzato insieme a...">
     <ion-content>
         <ion-list>
 
