--- a/ui/css/ionic.app.css
+++ b/ui/css/ionic.app.css
@@ -9845,13 +9845,19 @@ a.button {
   margin-right: 0.5em; }
 
 .xmastree:before {
-  content: url("img/icons/xmastree.png"); }
+  content: url("/ui/img/icons/xmastree.png"); }
 
 .xmastree-active:before {
-  content: url("img/icons/xmastree-active.png"); }
+  content: url("/ui/img/icons/xmastree-active.png"); }
 
 .partnership:before {
-  content: url("img/icons/partnership.png"); }
+  content: url("/ui/img/icons/partnership.png"); }
 
 .partnership-active:before {
-  content: url("img/icons/partnership-active.png"); }
+  content: url("/ui/img/icons/partnership-active.png"); }
+
+.present:before {
+  content: url("/ui/img/icons/present.png"); }
+
+.present-active:before {
+  content: url("/ui/img/icons/present-active.png"); }
